--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,19 @@
       rel="stylesheet"
     />
     <title>Link Forest</title>
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-L4BFLJ1FM8"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "G-L4BFLJ1FM8");
+    </script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
