New user issue solved

--- a/public/index.html
+++ b/public/index.html
@@ -41,6 +41,11 @@
 
       gtag("config", "G-L4BFLJ1FM8");
     </script>
+    <script
+      async
+      src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6116422903517331"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
